# assault-junkies

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  assault-junkies.sln  assault-junkies.vcxproj  assault-junkies.vcxproj.filters  dllmain.cpp  xmake.lua
cheetos/: globals.hpp
cheetos/math/: math.hpp
cheetos/sdk/: entity.hpp
cheetos/sdk/hook/: hook.cpp  hook.hpp
mem/: memory.cpp  memory.h  signature_scanner.cpp  signature_scanner.h
src/: dllmain.cpp  globals.h  main.cpp  utils.h
src/features/: math.h
src/features/sdk/: entity.h
src/hook/: hook.cpp  hook.h
src/mem/: memory.cpp  memory.h
src/memory/: memory.cpp  memory.h
src/opengl/: render.cpp  render.h
src/render/: opengl_hook.cpp  opengl_hook.h  opengl_render.cpp  opengl_render.h
src/sdk/: math.h  player.h  world.h
src/sdk/aim/: aimbot.cpp  aimbot.h
src/utils/: macros.h
utils/: helper_macros.h
